# myao3

./: .gitignore  CLAUDE.md  config.yaml.example  pyproject.toml  requirements.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/design/phase-1/: 01-project-setup.md  02-config.md  03-logging.md  04-event-entity.md  05-event-queue.md  06-agent-loop.md  07-entrypoint.md  08-http-server.md  09-hack-scripts.md  10-ci.md  README.md  commit-plan.md  technical-design.md
docs/design/phase-2/: 01-config-extension.md  02-database.md  03-slack-message.md  04-slack-channel-update-event.md  05-slack-bolt.md  06-slack-channel-update-handler.md  07-slack-tools.md  08-person.md  09-memory.md  10-docker.md  11-kubernetes.md  README.md
docs/requirements/: 01-overview.md  02-system-concept.md  03-events.md  04-agent-loop.md  05-copilotkit-ui.md  05-memory.md  06-self-improvement.md  07-non-functional-requirements.md  08-technology-stack.md  09-implementation-phases.md  10-glossary.md  11-changelog.md  12-tbd.md  README.md
hack/: README.md  send_ping.py  test_llm.py
src/myao3/: __main__.py
src/myao3/application/handlers/: __init__.py  event_handlers.py
src/myao3/application/services/: agent_loop.py
src/myao3/config/: __init__.py  loader.py  models.py
src/myao3/domain/entities/: __init__.py  event.py  slack_message.py
src/myao3/domain/repositories/: __init__.py  slack_message_repository.py
src/myao3/infrastructure/: __init__.py  event_queue.py
src/myao3/infrastructure/llm/: litellm_model.py  mock_model.py
src/myao3/infrastructure/logging/: __init__.py  setup.py
src/myao3/infrastructure/persistence/: __init__.py  database.py  slack_message_repository.py
src/myao3/infrastructure/tracing/: __init__.py  setup.py
src/myao3/presentation/http/: server.py
tests/unit/: test_main.py
tests/unit/application/handlers/: test_event_handlers.py
tests/unit/application/services/: test_agent_loop.py
tests/unit/config/: test_loader.py  test_models.py
tests/unit/infrastructure/: __init__.py  test_event_queue.py
(+11 files in other folders)
